refactor(ms-auth): improve architecture practices and tests configuration coverage.